# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: audit.yml  ci.yml  general.yml
migrations/: 20260306130953_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check_test.rs
